<resources>
    <string name="app_name">Calculator</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="multiply">Multiply</string>
    <string name="divided">Divided</string>
    <string name="calculate">Calculate</string>
    <string name="result">Reault: %.2f</string>
    <string name="msg_operator_empty">Operator is not selected!</string>
    <string name="msg_incorrect_data">Incorrect data!</string>
</resources>