<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
    >

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        />

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/center"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/center"
        android:inputType="numberDecimal"
        />

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number1"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            />

        <RadioButton
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            />

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            />

        <RadioButton
            android:id="@+id/divided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divided"
            />

    </RadioGroup>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgroup"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate"
        />

    <TextView
        android:id="@+id/result"
        style="@style/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        tools:text="blablabla"


        />
</RelativeLayout>